# Dhanu-UI

./: .gitignore  README.md  gesture_example_symbol.py  media_pipe_video.py  py_ttsx.py  pyproject.toml  requirements.txt  tts_demo.py
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
Frontend_Streamlit/: app_cam_feed.py  front_end.py  gesture_handler.py  state.py  ui_components.py
MediaPipe_Model/: gesture_example_symbol.py  media_pipe_video.py  run_media_pipe.py  tts_demo.py
S2LLM_Cerb/: .fuse_hidden0000005200000002  llm.py  robot_control_llm.py  test.py  voice_to_text.py
docs/: index.html
tests/: test_gesture.py  test_llm.py  test_speech.py
un_run/: uni_runner.py
