[project]
name = "dhanu-ui"
version = "0.1.0"
description = "Multi-modal robot control interface with camera, microphone, gesture recognition, and LLM orchestration."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.53.1",
    "cerebras-cloud-sdk>=1.64.1",
    "python-dotenv>=1.2.1",
    "mediapipe>=0.10.32",
    "opencv-python-headless>=4.13.0.90",
    "SpeechRecognition>=3.14.5",
    "gtts>=2.5.0",
    "numpy>=1.26",
    "pillow>=12.1.0",
    "pandas>=2.3.3",
    "pydeck>=0.9.1",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["Frontend_Streamlit", "S2LLM_Cerb", "MediaPipe_Model", "un_run"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
